更新下载页面

--- a/src/lib/i18n/locales/fr-FR/translation.json
+++ b/src/lib/i18n/locales/fr-FR/translation.json
@@ -566,6 +566,7 @@
   "Yes": "Oui",
   "You": "Vous",
   "You can copy the private key below:": "Vous pouvez copier la clé privée ci-dessous:",
+  "You can copy the website below:": "Vous pouvez copier le site web ci-dessous:",
   "You can invite up to 10 friends per day, with a maximum reward of 10,000 DGC per day.": "Vous pouvez inviter jusqu'à 10 amis par jour, avec une récompense maximale de 10,000 DGC par day.",
   "You have no archived conversations.": "Vous n'avez pas de conversations archivées.",
   "You have shared this chat": "Vous avez partagé cette conversation",
