--- a/src/lib/i18n/locales/ja-JP/translation.json
+++ b/src/lib/i18n/locales/ja-JP/translation.json
@@ -569,6 +569,7 @@
   "Yes": "はい",
   "You": "あなた；君；お前",
   "You can copy the private key below:": "下の秘密鍵をコピーできます：",
+  "You can copy the website below:": "下記のウェブサイトをコピーできます:",
   "You can invite up to 10 friends per day, with a maximum reward of 10,000 DGC per day.": "あなたは 1 日に最大 10 人の友人を招待できます。1 日の最大報酬は 10,000 DGC です。",
   "You have no archived conversations.": "あなたはアーカイブされた会話を持っていません。",
   "You have shared this chat": "あなたはこのチャットを共有しました。",
