--- a/src/lib/i18n/locales/ru-RU/translation.json
+++ b/src/lib/i18n/locales/ru-RU/translation.json
@@ -566,6 +566,7 @@
   "Yes": "Да",
   "You": "Вы",
   "You can copy the private key below:": "Вы можете скопировать приватный ключ ниже:",
+  "You can copy the website below:": "Вы можете скопировать веб-сайт ниже:",
   "You can invite up to 10 friends per day, with a maximum reward of 10,000 DGC per day.": "Вы можете приглашать до 10 друзей в день, с максимальным вознаграждением 10,000 DGC в день.",
   "You have no archived conversations.": "У вас нет архивированных чатов.",
   "You have shared this chat": "Вы поделились этим чатом",
