--- a/src/lib/i18n/locales/th-TH/translation.json
+++ b/src/lib/i18n/locales/th-TH/translation.json
@@ -566,6 +566,7 @@
   "Yes": "ใช่",
   "You": "คุณ",
   "You can copy the private key below:": "คุณสามารถคัดลอกคีย์ส่วนตัวด้านล่าง:",
+  "You can copy the website below:": "คุณสามารถคัดลอกเว็บไซต์ด้านล่างได้:",
   "You can invite up to 10 friends per day, with a maximum reward of 10,000 DGC per day.": "คุณสามารถเชิญเพื่อนได้ถึง 10 คนต่อวัน, มีรางวัลสูงสุด 10,000 DGC ต่อวัน.",
   "You have no archived conversations.": "คุณไม่มีแชทที่เก็บไว้",
   "You have shared this chat": "คุณได้แชร์แชทนี้",
