--- a/src/lib/i18n/locales/tr-TR/translation.json
+++ b/src/lib/i18n/locales/tr-TR/translation.json
@@ -567,6 +567,7 @@
   "Yes": "Evet",
   "You": "Sen",
   "You can copy the private key below:": "Aşağıdaki özel anahtarı kopyalayabilirsiniz:",
+  "You can copy the website below:": "Aşağıdaki web sitesini kopyalayabilirsiniz:",
   "You can invite up to 10 friends per day, with a maximum reward of 10,000 DGC per day.": "Günde en fazla 10 arkadaşınızı davet edebilirsiniz, günde en fazla 10,000 DGC ödülü olabilir.",
   "You have no archived conversations.": "Arşivlenmiş sohbetleriniz yok.",
   "You have shared this chat": "Bu sohbeti paylaşmışsınız",
