--- a/src/lib/i18n/locales/zh-CN/translation.json
+++ b/src/lib/i18n/locales/zh-CN/translation.json
@@ -620,6 +620,7 @@
   "Yesterday": "昨天",
   "You": "您",
   "You can copy the private key below:": "您可以复制下面的私钥：",
+  "You can copy the website below:": "您可以复制下面的网址:",
   "You can invite up to 10 friends per day, with a maximum reward of 10,000 DGC per day.": "您每天最多可以邀请 10 个朋友，每天的最高奖励为 10,000 个 DGC。",
   "You have no archived conversations.": "您没有已存档的对话记录。",
   "You have shared this chat": "您已经分享了此聊天记录",
