--- a/src/lib/i18n/locales/de-DE/translation.json
+++ b/src/lib/i18n/locales/de-DE/translation.json
@@ -567,6 +567,7 @@
   "Yes": "Ja",
   "You": "Sie",
   "You can copy the private key below:": "Sie können den privaten Schlüssel unten kopieren:",
+  "You can copy the website below:": "Sie können die unten stehende Website kopieren:",
   "You can invite up to 10 friends per day, with a maximum reward of 10,000 DGC per day.": "Sie können bis zu 10 Freunde pro Tag einladen, mit einer maximalen Belohnung von 10,000 DGC pro Tag.",
   "You have no archived conversations.": "Sie haben keine archivierten Gespräche.",
   "You have shared this chat": "Sie haben diesen Chat geteilt",
