--- a/src/lib/i18n/locales/en-US/translation.json
+++ b/src/lib/i18n/locales/en-US/translation.json
@@ -567,6 +567,7 @@
   "Yes": "",
   "You": "",
   "You can copy the private key below:": "",
+  "You can copy the website below:": "",
   "You can invite up to 10 friends per day, with a maximum reward of 10,000 DGC per day.": "",
   "You have no archived conversations.": "",
   "You have shared this chat": "",
