--- a/src/lib/i18n/locales/es-ES/translation.json
+++ b/src/lib/i18n/locales/es-ES/translation.json
@@ -567,6 +567,7 @@
   "Yes": "Sí",
   "You": "Tú",
   "You can copy the private key below:": "Puedes copiar la llave privada de abajo:",
+  "You can copy the website below:": "Puedes copiar el sitio web de abajo:",
   "You can invite up to 10 friends per day, with a maximum reward of 10,000 DGC per day.": "Puedes invitar hasta 10 amigos por día, con una recompensa máxima de 10,000 DGC por día.",
   "You have no archived conversations.": "No tienes conversaciones archivadas.",
   "You have shared this chat": "Has compartido este chat",
