--- a/src/lib/i18n/locales/id-ID/translation.json
+++ b/src/lib/i18n/locales/id-ID/translation.json
@@ -567,6 +567,7 @@
   "Yes": "Ya",
   "You": "Anda",
   "You can copy the private key below:": "Anda dapat salin kunci pribadi di bawah:",
+  "You can copy the website below:": "Anda dapat menyalin situs web di bawah ini:",
   "You can invite up to 10 friends per day, with a maximum reward of 10,000 DGC per day.": "Anda dapat mengundang hingga 10 teman per hari, dengan hadiah maksimum 10,000 DGC per hari.",
   "You have no archived conversations.": "Anda tidak memiliki obrolan yang diarsipkan.",
   "You have shared this chat": "Anda telah berbagi obrolan ini",
