--- a/src/lib/i18n/locales/ko-KR/translation.json
+++ b/src/lib/i18n/locales/ko-KR/translation.json
@@ -567,6 +567,7 @@
   "Yes": "예",
   "You": "당신",
   "You can copy the private key below:": "아래의 개인 키를 복사할 수 있습니다:",
+  "You can copy the website below:": "아래 웹사이트를 복사할 수 있습니다:",
   "You can invite up to 10 friends per day, with a maximum reward of 10,000 DGC per day.": "하루에 최대 10명의 친구를 초대할 수 있습니다. 하루에 최대 10,000 DGC의 보상을 받을 수 있습니다.",
   "You have no archived conversations.": "아카이브된 대화가 없습니다.",
   "You have shared this chat": "이 채팅을 공유했습니다.",
