--- a/src/lib/i18n/locales/pt-PT/translation.json
+++ b/src/lib/i18n/locales/pt-PT/translation.json
@@ -567,6 +567,7 @@
   "Yes": "Sim",
   "You": "Você",
   "You can copy the private key below:": "Você pode copiar a chave privada abaixo:",
+  "You can copy the website below:": "Você pode copiar o site da web abaixo:",
   "You can invite up to 10 friends per day, with a maximum reward of 10,000 DGC per day.": "Você pode convidar até 10 amigos por dia, com uma recompensa máxima de 10,000 DGC por dia.",
   "You have no archived conversations.": "Você não tem conversas arquivadas.",
   "You have shared this chat": "Você compartilhou este chat",
