--- a/src/lib/i18n/locales/vi-VN/translation.json
+++ b/src/lib/i18n/locales/vi-VN/translation.json
@@ -567,6 +567,7 @@
   "Yes": "Có",
   "You": "Bạn",
   "You can copy the private key below:": "Bạn có thể sao chép khóa riêng bên dưới:",
+  "You can copy the website below:": "Bạn có thể sao chép trang web bên dưới:",
   "You can invite up to 10 friends per day, with a maximum reward of 10,000 DGC per day.": "Bạn có thể mời tới 10 bạn mỗi ngày, với phần thưởng tối đa là 10,000 DGC mỗi ngày.",
   "You have no archived conversations.": "Bạn không có các cuộc trò chuyện đã lưu trữ.",
   "You have shared this chat": "Bạn đã chia sẻ cuộc trò chuyện này",
