首页 添加 下载奖励 按钮

--- a/src/lib/i18n/locales/pt-PT/translation.json
+++ b/src/lib/i18n/locales/pt-PT/translation.json
@@ -758,5 +758,7 @@
   "About DGC": "Sobre DGC",
   "Prior to launching on the mainnet of any trading platform, DGC tokens are marked as points. These points will be converted at 1:1 ratio when DGC officially launches. DGC team will make sure that this transition goes smoothly and prevent any abuse of this policy.": "Antes do lançamento na rede principal de qualquer plataforma de negociação, as fichas DGC são marcadas como pontos. Esses pontos serão convertidos na proporção 1:1 quando o DGC for lançado oficialmente. A equipe do DGC vai garantir que essa transição ocorra sem problemas e evitar qualquer abuso dessa política.",
   "About DBC": "Sobre DBC",
-  "DeepBrainChain is the world's first AI public chain. Its native token, DBC, is used as gas fee in this project. Any DGC transactions requires a certain amount of nominal DBCs.": "A DeepBrainChain é a primeira cadeia pública de IA do mundo. Seu token nativo, DBC, é usado como taxa de gás neste projeto. Todas as transações DGC requerem uma certa quantidade de DBCs nominais."
+  "DeepBrainChain is the world's first AI public chain. Its native token, DBC, is used as gas fee in this project. Any DGC transactions requires a certain amount of nominal DBCs.": "A DeepBrainChain é a primeira cadeia pública de IA do mundo. Seu token nativo, DBC, é usado como taxa de gás neste projeto. Todas as transações DGC requerem uma certa quantidade de DBCs nominais.",
+  "For more information, please": "Para mais informações, por favor",
+  "official website": "site oficial"
 }
