--- a/src/lib/i18n/locales/es-ES/translation.json
+++ b/src/lib/i18n/locales/es-ES/translation.json
@@ -758,5 +758,7 @@
   "About DGC": "Acerca de DGC",
   "Prior to launching on the mainnet of any trading platform, DGC tokens are marked as points. These points will be converted at 1:1 ratio when DGC officially launches. DGC team will make sure that this transition goes smoothly and prevent any abuse of this policy.": "Antes de lanzarse en la red principal de cualquier plataforma de trading, las fichas DGC se marcan como puntos. Estos puntos se convertirán en una proporción de 1:1 cuando DGC se lance oficialmente. El equipo de DGC se asegurará de que esta transición se realice sin problemas y evitará cualquier abuso de esta política.",
   "About DBC": "Acerca de DBC",
-  "DeepBrainChain is the world's first AI public chain. Its native token, DBC, is used as gas fee in this project. Any DGC transactions requires a certain amount of nominal DBCs.": "DeepBrainChain es la primera cadena pública de IA del mundo. Su token nativo, DBC, se utiliza como tarifa de gas en este proyecto. Cualquier transacción DGC requiere una cierta cantidad de DBCs nominales."
+  "DeepBrainChain is the world's first AI public chain. Its native token, DBC, is used as gas fee in this project. Any DGC transactions requires a certain amount of nominal DBCs.": "DeepBrainChain es la primera cadena pública de IA del mundo. Su token nativo, DBC, se utiliza como tarifa de gas en este proyecto. Cualquier transacción DGC requiere una cierta cantidad de DBCs nominales.",
+  "For more information, please": "Para obtener más información, por favor",
+  "official website": "sitio web oficial"
 }
