--- a/src/lib/i18n/locales/ja-JP/translation.json
+++ b/src/lib/i18n/locales/ja-JP/translation.json
@@ -758,5 +758,7 @@
   "About DGC": "DGC について",
   "Prior to launching on the mainnet of any trading platform, DGC tokens are marked as points. These points will be converted at 1:1 ratio when DGC officially launches. DGC team will make sure that this transition goes smoothly and prevent any abuse of this policy.": "どの取引プラットフォームのメインネットに立ち上げる前に、DGC トークンはポイントとしてマークされます。DGC が正式に立ち上げられるとき、これらのポイントは 1:1 の比率で変換されます。DGC チームは、この移行がスムーズに行われ、このポリシーの乱用を防ぐように確認します。",
   "About DBC": "DBC について",
-  "DeepBrainChain is the world's first AI public chain. Its native token, DBC, is used as gas fee in this project. Any DGC transactions requires a certain amount of nominal DBCs.": "ディープブレインチェインは世界初の AI パブリックチェインです。そのネイティブトークンである DBC は、このプロジェクトでガス料金として使われます。どの DGC 取引も一定量の名目上の DBC を必要とします。"
+  "DeepBrainChain is the world's first AI public chain. Its native token, DBC, is used as gas fee in this project. Any DGC transactions requires a certain amount of nominal DBCs.": "ディープブレインチェインは世界初の AI パブリックチェインです。そのネイティブトークンである DBC は、このプロジェクトでガス料金として使われます。どの DGC 取引も一定量の名目上の DBC を必要とします。",
+  "For more information, please": "詳細情報をご希望の方は、お問い合わせください",
+  "official website": "公式ウェブサイト"
 }
