--- a/src/lib/i18n/locales/ko-KR/translation.json
+++ b/src/lib/i18n/locales/ko-KR/translation.json
@@ -758,5 +758,7 @@
   "About DGC": "DGC에 관하여",
   "Prior to launching on the mainnet of any trading platform, DGC tokens are marked as points. These points will be converted at 1:1 ratio when DGC officially launches. DGC team will make sure that this transition goes smoothly and prevent any abuse of this policy.": "어떤 거래 플랫폼의 메인넷에 출시되기 전에, DGC 토큰은 포인트로 표시됩니다. DGC가 공식적으로 출시될 때, 이러한 포인트는 1:1 비율로 변환됩니다. DGC 팀은 이 전환이 원활하게 이루어지고 이 정책의 남용을 방지할 것입니다.",
   "About DBC": "DBC에 관하여",
-  "DeepBrainChain is the world's first AI public chain. Its native token, DBC, is used as gas fee in this project. Any DGC transactions requires a certain amount of nominal DBCs.": "딥브레인체인은 세계 최초의 AI 공개 체인입니다. 그 자체 토큰인 DBC는 이 프로젝트에서 가스 요금으로 사용됩니다. 모든 DGC 거래는 일정량의 명목상의 DBC를 요구합니다."
+  "DeepBrainChain is the world's first AI public chain. Its native token, DBC, is used as gas fee in this project. Any DGC transactions requires a certain amount of nominal DBCs.": "딥브레인체인은 세계 최초의 AI 공개 체인입니다. 그 자체 토큰인 DBC는 이 프로젝트에서 가스 요금으로 사용됩니다. 모든 DGC 거래는 일정량의 명목상의 DBC를 요구합니다.",
+  "For more information, please": "더 자세한 정보를 원하시면, 문의해 주세요",
+  "official website": "공식 웹사이트"
 }
