--- a/src/lib/i18n/locales/ru-RU/translation.json
+++ b/src/lib/i18n/locales/ru-RU/translation.json
@@ -757,5 +757,7 @@
   "About DGC": "О DGC",
   "Prior to launching on the mainnet of any trading platform, DGC tokens are marked as points. These points will be converted at 1:1 ratio when DGC officially launches. DGC team will make sure that this transition goes smoothly and prevent any abuse of this policy.": "До запуска на основной сети любой торговой платформы токены DGC помечаются как очки. Эти очки будут преобразованы в соотношении 1:1, когда DGC официально запустится. Команда DGC 确保这种转换顺利进行并防止对这项政策的任何滥用。",
   "About DBC": "О DBC",
-  "DeepBrainChain is the world's first AI public chain. Its native token, DBC, is used as gas fee in this project. Any DGC transactions requires a certain amount of nominal DBCs.": "DeepBrainChain - это первая публичная цепь ИИ в мире. Его собственный токен, DBC, используется в качестве комиссии за газ в этом проекте. Любая транзакция DGC требует определенного количества номинальных DBC."
+  "DeepBrainChain is the world's first AI public chain. Its native token, DBC, is used as gas fee in this project. Any DGC transactions requires a certain amount of nominal DBCs.": "DeepBrainChain - это первая публичная цепь ИИ в мире. Его собственный токен, DBC, используется в качестве комиссии за газ в этом проекте. Любая транзакция DGC требует определенного количества номинальных DBC.",
+  "For more information, please": "Для получения дополнительной информации, пожалуйста",
+  "official website": "официальный сайт"
 }
