添加苹果或 安卓手机校验

--- a/src/lib/i18n/locales/de-DE/translation.json
+++ b/src/lib/i18n/locales/de-DE/translation.json
@@ -760,5 +760,6 @@
   "About DBC": "Über DBC",
   "DeepBrainChain is the world's first AI public chain. Its native token, DBC, is used as gas fee in this project. Any DGC transactions requires a certain amount of nominal DBCs.": "DeepBrainChain ist die weltweit erste KI-Öffentliche Kette. Sein eigenes Token, DBC, wird in diesem Projekt als Gasgebühr genutzt. Jede DGC-Transaktion erfordert eine bestimmte Menge an nominalen DBCs.",
   "For more information, please": "Für weitere Informationen, bitten wir Sie",
-  "official website": "offizielle Website"
+  "official website": "offizielle Website",
+  "sign in": "anmelden"
 }
