--- a/src/lib/i18n/locales/es-ES/translation.json
+++ b/src/lib/i18n/locales/es-ES/translation.json
@@ -760,5 +760,6 @@
   "About DBC": "Acerca de DBC",
   "DeepBrainChain is the world's first AI public chain. Its native token, DBC, is used as gas fee in this project. Any DGC transactions requires a certain amount of nominal DBCs.": "DeepBrainChain es la primera cadena pública de IA del mundo. Su token nativo, DBC, se utiliza como tarifa de gas en este proyecto. Cualquier transacción DGC requiere una cierta cantidad de DBCs nominales.",
   "For more information, please": "Para obtener más información, por favor",
-  "official website": "sitio web oficial"
+  "official website": "sitio web oficial",
+  "sign in": "iniciar sesión"
 }
