--- a/src/lib/i18n/locales/fr-FR/translation.json
+++ b/src/lib/i18n/locales/fr-FR/translation.json
@@ -759,5 +759,6 @@
   "About DBC": "À propos de DBC",
   "DeepBrainChain is the world's first AI public chain. Its native token, DBC, is used as gas fee in this project. Any DGC transactions requires a certain amount of nominal DBCs.": "DeepBrainChain est la première chaîne publique d'IA au monde. Son jeton natif, DBC, est utilisé comme frais de gaz dans ce projet. Toutes les transactions DGC nécessitent une certaine quantité de DBC nominaux.",
   "For more information, please": "Pour plus d'informations, s'il vous plaît",
-  "official website": "site officiel"
+  "official website": "site officiel",
+  "sign in": "s'identifier"
 }
