--- a/src/lib/i18n/locales/id-ID/translation.json
+++ b/src/lib/i18n/locales/id-ID/translation.json
@@ -760,5 +760,6 @@
   "About DBC": "Tentang DBC",
   "DeepBrainChain is the world's first AI public chain. Its native token, DBC, is used as gas fee in this project. Any DGC transactions requires a certain amount of nominal DBCs.": "DeepBrainChain adalah rantai publik AI pertama di dunia. Token aslinya, DBC, digunakan sebagai biaya gas dalam proyek ini. Setiap transaksi DGC memerlukan sejumlah DBC nominal tertentu.",
   "For more information, please": "Untuk informasi lebih lanjut, silakan",
-  "official website": "situs web resmi"
+  "official website": "situs web resmi",
+  "sign in": "masuk"
 }
