--- a/src/lib/i18n/locales/ja-JP/translation.json
+++ b/src/lib/i18n/locales/ja-JP/translation.json
@@ -760,5 +760,6 @@
   "About DBC": "DBC について",
   "DeepBrainChain is the world's first AI public chain. Its native token, DBC, is used as gas fee in this project. Any DGC transactions requires a certain amount of nominal DBCs.": "ディープブレインチェインは世界初の AI パブリックチェインです。そのネイティブトークンである DBC は、このプロジェクトでガス料金として使われます。どの DGC 取引も一定量の名目上の DBC を必要とします。",
   "For more information, please": "詳細情報をご希望の方は、お問い合わせください",
-  "official website": "公式ウェブサイト"
+  "official website": "公式ウェブサイト",
+  "sign in": "ログイン"
 }
