--- a/src/lib/i18n/locales/ru-RU/translation.json
+++ b/src/lib/i18n/locales/ru-RU/translation.json
@@ -759,5 +759,6 @@
   "About DBC": "О DBC",
   "DeepBrainChain is the world's first AI public chain. Its native token, DBC, is used as gas fee in this project. Any DGC transactions requires a certain amount of nominal DBCs.": "DeepBrainChain - это первая публичная цепь ИИ в мире. Его собственный токен, DBC, используется в качестве комиссии за газ в этом проекте. Любая транзакция DGC требует определенного количества номинальных DBC.",
   "For more information, please": "Для получения дополнительной информации, пожалуйста",
-  "official website": "официальный сайт"
+  "official website": "официальный сайт",
+  "sign in": "войти"
 }
