--- a/src/lib/i18n/locales/th-TH/translation.json
+++ b/src/lib/i18n/locales/th-TH/translation.json
@@ -759,5 +759,6 @@
   "About DBC": "เกี่ยวกับ DBC",
   "DeepBrainChain is the world's first AI public chain. Its native token, DBC, is used as gas fee in this project. Any DGC transactions requires a certain amount of nominal DBCs.": "DeepBrainChain เป็นโครงการประชาชน AI แรกในโลก. โทเค็นดั้งเดิมของมันคือ DBC ซึ่งถูกใช้เป็นค่าธรรมเนียมแก๊สในโครงการนี้. การทำธุรกรรม DGC ใด ๆ จะต้องมี DBC แบบมีชื่อเรียกจำนวนหนึ่ง.",
   "For more information, please": "สำหรับข้อมูลเพิ่มเติม โปรด",
-  "official website": "เว็บไซต์สำนักงาน"
+  "official website": "เว็บไซต์สำนักงาน",
+  "sign in": "เข้าสู่ระบบ"
 }
