--- a/src/lib/i18n/locales/tr-TR/translation.json
+++ b/src/lib/i18n/locales/tr-TR/translation.json
@@ -760,5 +760,6 @@
   "About DBC": "DBC Hakkında",
   "DeepBrainChain is the world's first AI public chain. Its native token, DBC, is used as gas fee in this project. Any DGC transactions requires a certain amount of nominal DBCs.": "DeepBrainChain, dünyanın ilk yapay zeka (AI) açık zinciridir. İlgili proje için, yerel tokenı olan DBC, gaz ücreti olarak kullanılır. Herhangi bir DGC işlemi belirli bir miktarda nominal DBC'ye ihtiyaç duyar.",
   "For more information, please": "Daha fazla bilgi için, lütfen",
-  "official website": "resmi web sitesi"
+  "official website": "resmi web sitesi",
+  "sign in": "giriş yapmak"
 }
