--- a/src/lib/i18n/locales/ko-KR/translation.json
+++ b/src/lib/i18n/locales/ko-KR/translation.json
@@ -760,5 +760,6 @@
   "About DBC": "DBC에 관하여",
   "DeepBrainChain is the world's first AI public chain. Its native token, DBC, is used as gas fee in this project. Any DGC transactions requires a certain amount of nominal DBCs.": "딥브레인체인은 세계 최초의 AI 공개 체인입니다. 그 자체 토큰인 DBC는 이 프로젝트에서 가스 요금으로 사용됩니다. 모든 DGC 거래는 일정량의 명목상의 DBC를 요구합니다.",
   "For more information, please": "더 자세한 정보를 원하시면, 문의해 주세요",
-  "official website": "공식 웹사이트"
+  "official website": "공식 웹사이트",
+  "sign in": "시그인"
 }
