--- a/src/lib/i18n/locales/vi-VN/translation.json
+++ b/src/lib/i18n/locales/vi-VN/translation.json
@@ -751,5 +751,6 @@
   "About DBC": "Về DBC",
   "DeepBrainChain is the world's first AI public chain. Its native token, DBC, is used as gas fee in this project. Any DGC transactions requires a certain amount of nominal DBCs.": "DeepBrainChain là chuỗi công khai AI đầu tiên trên thế giới. Mã thông báo bản địa của nó, DBC, được sử dụng làm phí khí trong dự án này. Bất kỳ giao dịch DGC nào đều yêu cầu một lượng nhất định các DBC danh nghĩa.",
   "For more information, please": "Để biết thêm thông tin, xin vui lòng.",
-  "official website": "trang web chính thức"
+  "official website": "trang web chính thức",
+  "sign in": "đăng nhập"
 }
