--- a/src/lib/i18n/locales/en-US/translation.json
+++ b/src/lib/i18n/locales/en-US/translation.json
@@ -761,5 +761,5 @@
   "DeepBrainChain is the world's first AI public chain. Its native token, DBC, is used as gas fee in this project. Any DGC transactions requires a certain amount of nominal DBCs.": "",
   "For more information, please": "",
   "official website": "",
-  "sign in": ""
+  "sign in": "sign in"
 }
