更新 下载 提示信息

--- a/src/lib/i18n/locales/th-TH/translation.json
+++ b/src/lib/i18n/locales/th-TH/translation.json
@@ -758,7 +758,8 @@
   "Prior to launching on the mainnet of any trading platform, DGC tokens are marked as points. These points will be converted at 1:1 ratio when DGC officially launches. DGC team will make sure that this transition goes smoothly and prevent any abuse of this policy.": "ก่อนการเปิดตัวบนโครงการหลักของแพลตฟอร์มการซื้อขายใด ๆ, โทเค็น DGC จะถูกกำหนดเป็นแต้ม. เหตุการณ์เหล่านี้จะถูกแปลงในอัตราส่วน 1:1 เมื่อ DGC เปิดตัวอย่างเป็นทางการ. ทีม DGC จะรับประกันว่าการเปลี่ยนแปลงนี้จะดำเนินต่อไปอย่างราบรื่นและป้องกันการประพฤติตัวอย่างไม่เหมาะสมของนโยบายนี้.",
   "About DBC": "เกี่ยวกับ DBC",
   "DeepBrainChain is the world's first AI public chain. Its native token, DBC, is used as gas fee in this project. Any DGC transactions requires a certain amount of nominal DBCs.": "DeepBrainChain เป็นโครงการประชาชน AI แรกในโลก. โทเค็นดั้งเดิมของมันคือ DBC ซึ่งถูกใช้เป็นค่าธรรมเนียมแก๊สในโครงการนี้. การทำธุรกรรม DGC ใด ๆ จะต้องมี DBC แบบมีชื่อเรียกจำนวนหนึ่ง.",
-  "For more information, please": "สำหรับข้อมูลเพิ่มเติม โปรด",
-  "official website": "เว็บไซต์สำนักงาน",
-  "sign in": "เข้าสู่ระบบ"
+  "Download DeGPT APP": "ดาวน์โหลดแอป DeGPT",
+  "More info": "ข้อมูลเพิ่มเติม",
+  "Visit": "ไปเยือน",
+  "official website": "เว็บไซต์สำนักงาน"
 }
