--- a/src/lib/i18n/locales/vi-VN/translation.json
+++ b/src/lib/i18n/locales/vi-VN/translation.json
@@ -750,7 +750,8 @@
   "Prior to launching on the mainnet of any trading platform, DGC tokens are marked as points. These points will be converted at 1:1 ratio when DGC officially launches. DGC team will make sure that this transition goes smoothly and prevent any abuse of this policy.": "Trước khi được phát hành trên mạng chính của bất kỳ nền tảng giao dịch nào, các mã thông báo DGC được đánh dấu là điểm. Những điểm này sẽ được chuyển đổi theo tỷ lệ 1:1 khi DGC được chính thức phát hành. Đội ngũ DGC sẽ đảm bảo rằng quá trình chuyển đổi này diễn ra suôn sẻ và ngăn chặn mọi sự lạm dụng của chính sách này.",
   "About DBC": "Về DBC",
   "DeepBrainChain is the world's first AI public chain. Its native token, DBC, is used as gas fee in this project. Any DGC transactions requires a certain amount of nominal DBCs.": "DeepBrainChain là chuỗi công khai AI đầu tiên trên thế giới. Mã thông báo bản địa của nó, DBC, được sử dụng làm phí khí trong dự án này. Bất kỳ giao dịch DGC nào đều yêu cầu một lượng nhất định các DBC danh nghĩa.",
-  "For more information, please": "Để biết thêm thông tin, xin vui lòng.",
-  "official website": "trang web chính thức",
-  "sign in": "đăng nhập"
+  "Download DeGPT APP": "Tải xuống ứng dụng DeGPT",
+  "More info": "Thêm thông tin",
+  "Visit": "Đến thăm",
+  "official website": "trang web chính thức"
 }
