--- a/src/lib/i18n/locales/de-DE/translation.json
+++ b/src/lib/i18n/locales/de-DE/translation.json
@@ -759,7 +759,8 @@
   "Prior to launching on the mainnet of any trading platform, DGC tokens are marked as points. These points will be converted at 1:1 ratio when DGC officially launches. DGC team will make sure that this transition goes smoothly and prevent any abuse of this policy.": "Bevor DGC auf dem Hauptnetz irgendeiner Handelsplattform gestartet wird, werden die DGC-Token als Punkte markiert. Diese Punkte werden im Verhältnis 1:1 konvertiert, wenn DGC offiziell gestartet wird. Das DGC-Team wird sicherstellen, dass dieser Übergang reibungslos verläuft und jegliche Missbrauch dieser Politik verhindern.",
   "About DBC": "Über DBC",
   "DeepBrainChain is the world's first AI public chain. Its native token, DBC, is used as gas fee in this project. Any DGC transactions requires a certain amount of nominal DBCs.": "DeepBrainChain ist die weltweit erste KI-Öffentliche Kette. Sein eigenes Token, DBC, wird in diesem Projekt als Gasgebühr genutzt. Jede DGC-Transaktion erfordert eine bestimmte Menge an nominalen DBCs.",
-  "For more information, please": "Für weitere Informationen, bitten wir Sie",
-  "official website": "offizielle Website",
-  "sign in": "anmelden"
+  "Download DeGPT APP": "DeGPT-APP herunterladen",
+  "More info": "Mehr Informationen",
+  "Visit": "Besuchen",
+  "official website": "offizielle Website"
 }
