--- a/src/lib/i18n/locales/fr-FR/translation.json
+++ b/src/lib/i18n/locales/fr-FR/translation.json
@@ -758,7 +758,8 @@
   "Prior to launching on the mainnet of any trading platform, DGC tokens are marked as points. These points will be converted at 1:1 ratio when DGC officially launches. DGC team will make sure that this transition goes smoothly and prevent any abuse of this policy.": "Avant le lancement sur le réseau principal de toute plateforme de trading, les jetons DGC sont marqués en points. Ces points seront convertis au ratio 1:1 lorsque DGC sera lancé officiellement. L'équipe DGC veillera à ce que cette transition se fasse en douceur et préviendra tout abus de cette politique.",
   "About DBC": "À propos de DBC",
   "DeepBrainChain is the world's first AI public chain. Its native token, DBC, is used as gas fee in this project. Any DGC transactions requires a certain amount of nominal DBCs.": "DeepBrainChain est la première chaîne publique d'IA au monde. Son jeton natif, DBC, est utilisé comme frais de gaz dans ce projet. Toutes les transactions DGC nécessitent une certaine quantité de DBC nominaux.",
-  "For more information, please": "Pour plus d'informations, s'il vous plaît",
-  "official website": "site officiel",
-  "sign in": "s'identifier"
+  "Download DeGPT APP": "Télécharger l'application DeGPT",
+  "More info": "Plus d'informations",
+  "Visit": "Visiter",
+  "official website": "site officiel"
 }
