更新奖励过期 校验

--- a/src/lib/i18n/locales/de-DE/translation.json
+++ b/src/lib/i18n/locales/de-DE/translation.json
@@ -648,6 +648,10 @@
   "Failed to received reward": "Es ist nicht möglich, die Belohnung zu erhalten.",
   "Clockin rewards can only be obtained once within a 24-hour period，you can try later. ": "Die Anmeldeprämien können nur einmal innerhalb eines Zeitraums von 24 Stunden erhalten werden. Sie können es später nochmal versuchen.",
   "You Rewards History not found": "Ihre Belohnungsgeschichte wurde nicht gefunden.",
+  "You Rewards History has expired": "Ihre Belohnungsgeschichte ist abgelaufen",
+  "Reward expird": "Belohnung abgelaufen",
+  "Obtain now": "Jetzt erhalten",
+  "Obtain in...": "In... erhalten",
   "Try again": "Versuchen Sie es erneut",
   "Time expired, try again": "Die Zeit ist abgelaufen, versuchen Sie es erneut",
   "Your face has been used": "Ihr Gesicht wurde bereits genutzt",
