--- a/src/lib/i18n/locales/en-US/translation.json
+++ b/src/lib/i18n/locales/en-US/translation.json
@@ -648,6 +648,10 @@
   "Failed to received reward": "",
   "Clockin rewards can only be obtained once within a 24-hour period，you can try later.": "",
   "You Rewards History not found": "",
+  "You Rewards History has expired": "",
+  "Reward expird": "",
+  "Obtain now": "",
+  "Obtain in...": "",
   "Try again": "",
   "Time expired, try again": "",
   "Your face has been used": "",
