--- a/src/lib/i18n/locales/es-ES/translation.json
+++ b/src/lib/i18n/locales/es-ES/translation.json
@@ -648,6 +648,10 @@
   "Failed to received reward": "No se logró recibir la recompensa.",
   "Clockin rewards can only be obtained once within a 24-hour period，you can try later.": "Las recompensas de clockin solo se pueden obtener una vez en un período de 24 horas. Puedes intentarlo más tarde.",
   "You Rewards History not found": "No se ha encontrado el historial de tus recompensas.",
+  "You Rewards History has expired": "Su historial de recompensas ha caducado",
+  "Reward expird": "Recompensa vencida",
+  "Obtain now": "Obtener ahora",
+  "Obtain in...": "Obtener en...",
   "Try again": "Inténtalo de nuevo",
   "Time expired, try again": "Se ha agotado el tiempo, inténtalo de nuevo",
   "Your face has been used": "Tu cara ya ha sido utilizada",
