--- a/src/lib/i18n/locales/fr-FR/translation.json
+++ b/src/lib/i18n/locales/fr-FR/translation.json
@@ -647,6 +647,10 @@
   "Failed to received reward": "Échec de la réception de la récompense",
   "Clockin rewards can only be obtained once within a 24-hour period，you can try later.": "Les récompenses de clockin ne peuvent être obtenues qu'une seule fois dans une période de 24 heures. Vous pouvez essayer plus tard.",
   "You Rewards History not found": "Aucune historique de vos récompenses n'a été trouvée.",
+  "You Rewards History has expired": "Votre historique de récompenses a expiré",
+  "Reward expird": "Récompense expirée",
+  "Obtain now": "Obtenir maintenant",
+  "Obtain in...": "Obtenir dans...",
   "Try again": "Essaye encore",
   "Time expired, try again": "Le temps est écoulé, essaie encore",
   "Your face has been used": "Votre visage a déjà été utilisé",
