--- a/src/lib/i18n/locales/id-ID/translation.json
+++ b/src/lib/i18n/locales/id-ID/translation.json
@@ -648,6 +648,10 @@
   "Failed to received reward": "Gagal menerima hadiah.",
   "Clockin rewards can only be obtained once within a 24-hour period，you can try later.": "Hadiah clockin hanya bisa diperoleh sekali dalam jangka waktu 24 jam, Anda bisa mencobanya lagi nanti.",
   "You Rewards History not found": "Riwayat hadiah Anda tidak ditemukan.",
+  "You Rewards History has expired": "Riwayat Hadiah Anda telah kedaluwarsa",
+  "Reward expird": "Hadiah telah kedaluwarsa",
+  "Obtain now": "Dapatkan sekarang",
+  "Obtain in...": "Dapatkan dalam...",
   "Try again": "Coba lagi",
   "Time expired, try again": "Waktu telah habis, coba lagi",
   "Your face has been used": "Wajah Anda telah digunakan",
