--- a/src/lib/i18n/locales/ja-JP/translation.json
+++ b/src/lib/i18n/locales/ja-JP/translation.json
@@ -648,6 +648,10 @@
   "Failed to received reward": "報酬を受け取ることができませんでした。",
   "Clockin rewards can only be obtained once within a 24-hour period，you can try later.": "クロックインの報酬は 24 時間以内に 1 回だけ取得でき、後で試してみることができます。",
   "You Rewards History not found": "あなたの報酬履歴が見つかりません。",
+  "You Rewards History has expired": "あなたの報酬履歴は期限切れになりました",
+  "Reward expird": "報酬の期限切れ",
+  "Obtain now": "今すぐ取得する",
+  "Obtain in...": "の中で取得する...",
   "Try again": "もう一度試してください",
   "Time expired, try again": "時間が切れました。もう一度試してください",
   "Your face has been used": "あなたの顔は既に使われています",
