--- a/src/lib/i18n/locales/pt-PT/translation.json
+++ b/src/lib/i18n/locales/pt-PT/translation.json
@@ -648,6 +648,10 @@
   "Failed to received reward": "Falha ao receber a recompensa",
   "Clockin rewards can only be obtained once within a 24-hour period，you can try later.": "As recompensas de clockin só podem ser obtidas uma vez em um período de 24 horas. Você pode tentar mais tarde.",
   "You Rewards History not found": "Histórico de suas recompensas não encontrado",
+  "You Rewards History has expired": "Seu histórico de recompensas expirou",
+  "Reward expird": "Recompensa expirada",
+  "Obtain now": "Obter agora",
+  "Obtain in...": "Obter em...",
   "Try again": "Tente novamente",
   "Time expired, try again": "O tempo expirou, tente novamente",
   "Your face has been used": "Seu rosto já foi usado",
