--- a/src/lib/i18n/locales/ru-RU/translation.json
+++ b/src/lib/i18n/locales/ru-RU/translation.json
@@ -647,6 +647,10 @@
   "Failed to received reward": "Не удалось получить награду.",
   "Clockin rewards can only be obtained once within a 24-hour period，you can try later.": "Награда за регистрацию может быть получена только один раз в течение 24-часового периода. Вы можете попробовать позже.",
   "You Rewards History not found": "История ваших наград не найдена.",
+  "You Rewards History has expired": "Ваша история наград истекла",
+  "Reward expird": "Награда истекла",
+  "Obtain now": "Получить сейчас",
+  "Obtain in...": "Получить в...",
   "Try again": "Попробуйте еще раз",
   "Time expired, try again": "Время истекло, попробуйте еще раз",
   "Your face has been used": "Ваше лицо уже было использовано",
