--- a/src/lib/i18n/locales/th-TH/translation.json
+++ b/src/lib/i18n/locales/th-TH/translation.json
@@ -647,6 +647,10 @@
   "Failed to received reward": "ไม่สามารถรับรางวัลได้",
   "Clockin rewards can only be obtained once within a 24-hour period，you can try later.": "รางวัลจากการคล็อกอินสามารถได้รับเพียงครั้งเดียวในช่วงเวลา 24 ชั่วโมงเท่านั้น คุณสามารถลองอีกครั้งในภายหลังได้",
   "You Rewards History not found": "ไม่พบประวัติการรับรางวัลของคุณ",
+  "You Rewards History has expired": "ประวัติการรับรางวัลของคุณหมดอายุแล้ว",
+  "Reward expird": "รางวัลหมดอายุ",
+  "Obtain now": "รับมาได้ในขณะนี้",
+  "Obtain in...": "รับมาได้ใน...",
   "Try again": "ลองใหม่",
   "Time expired, try again": "เวลาถึงกำหนดแล้ว,ลองใหม่",
   "Your face has been used": "ใบหน้าของคุณถูกใช้ไปแล้ว",
