--- a/src/lib/i18n/locales/tr-TR/translation.json
+++ b/src/lib/i18n/locales/tr-TR/translation.json
@@ -648,6 +648,10 @@
   "Failed to received reward": "Ödül alma işlemi başarısız oldu.",
   "Clockin rewards can only be obtained once within a 24-hour period，you can try later.": "Clockin ödülleri yalnızca 24 saatlik bir süre içinde bir kez alınabilir, daha sonra deneyebilirsiniz.",
   "You Rewards History not found": "Ödül geçmişiniz bulunamadı.",
+  "You Rewards History has expired": "Ödül geçmişiniz sona erdi",
+  "Reward expird": "Ödül sona erdi",
+  "Obtain now": "Şimdi alın",
+  "Obtain in...": "İçinde alın...",
   "Try again": "Tekrar deneyin",
   "Time expired, try again": "Süre doldu, tekrar deneyin",
   "Your face has been used": "Yüzünüz kullanılmıştı",
