--- a/src/lib/i18n/locales/vi-VN/translation.json
+++ b/src/lib/i18n/locales/vi-VN/translation.json
@@ -648,6 +648,10 @@
   "Failed to received reward": "Không thể nhận thưởng được.",
   "Clockin rewards can only be obtained once within a 24-hour period，you can try later.": "Phần thưởng đăng nhập chỉ có thể được nhận một lần trong thời gian 24 giờ, bạn có thể thử lại sau.",
   "You Rewards History not found": "Lịch sử thưởng của bạn không được tìm thấy.",
+  "You Rewards History has expired": "Lịch sử thưởng của bạn đã hết hạn",
+  "Reward expird": "Phần thưởng hết hạn",
+  "Obtain now": "Nhận ngay bây giờ",
+  "Obtain in...": "Nhận trong...",
   "Try again": "Coba lagi",
   "Time expired, try again": "Waktu sudah habis, coba lagi",
   "Your face has been used": "Wajah Anda sudah digunakan",
