--- a/src/lib/i18n/locales/zh-CN/translation.json
+++ b/src/lib/i18n/locales/zh-CN/translation.json
@@ -647,6 +647,10 @@
   "Failed to received reward": "未能领取奖励",
   "Clockin rewards can only be obtained once within a 24-hour period，you can try later.": "打卡奖励在 24 小时内只能获取一次，您可以稍后再试。",
   "You Rewards History not found": "未找到您的奖励记录",
+  "You Rewards History has expired": "您的奖励已过期",
+  "Reward expird": "奖励已过期",
+  "Obtain now": "立即获取",
+  "Obtain in...": "获取中…… ",
   "Try again": "再试一次",
   "Time expired, try again": "时间已过期，请再试一次",
   "Your face has been used": "您的面部已认证过",
