--- a/src/lib/i18n/locales/ko-KR/translation.json
+++ b/src/lib/i18n/locales/ko-KR/translation.json
@@ -648,6 +648,10 @@
   "Failed to received reward": "보상 수령에 실패했습니다.",
   "Clockin rewards can only be obtained once within a 24-hour period，you can try later.": "클록인 보상은 24시간 동안 한 번만 받을 수 있으며 나중에 시도해 보실 수 있습니다.",
   "You Rewards History not found": "보상 기록이 발견되지 않습니다.",
+  "You Rewards History has expired": "당신의 보상 이력이 만료되었습니다",
+  "Reward expird": "보상 만료",
+  "Obtain now": "지금 받기",
+  "Obtain in...": "에서 받기...",
   "Try again": "다시 시도해 보세요",
   "Time expired, try again": "시간이 만료되었습니다. 다시 시도해 보세요",
   "Your face has been used": "귀하의 얼굴이 이미 사용되었습니다",
